# autotools

ModemSms/: Makefile.in  TODO.tasks  aclocal.m4  configure
ModemSms/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
ModemSms/src/: Makefile.am  Makefile.in  blueHFPApi.cpp  blueHFPApi.h  blueutils.cpp  blueutils.h  main.cpp
ModemSmsC++/: Makefile.am  Makefile.in  configure  configure.ac
ModemSmsC++/autom4te.cache/: output.1  requests  traces.1
ModemSmsC++/src/: Makefile.am  Makefile.am-back  Makefile.in  blueHFPApi.cpp  blueutils.cpp  blueutils.h  main.cpp  unicode.cpp
bluehfp/: Makefile.am  Makefile.in  aclocal.m4  blueHFPApi.h  bluehfp.spec  blueutils.h  configure  configure.ac  unicode.h
bluehfp/autom4te.cache/: output.0  output.1  traces.0  traces.1
bluehfp/src/: Makefile.am  Makefile.in  blueHFPApi.cpp  blueutils.cpp  blueutils.h  libbluehfp-1.0.pc.in  main.cpp  unicode.h
murphy-0.0.24/: Makefile.in  aclocal.m4  configure  configure.ac
murphy-0.0.24/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
murphy-0.0.24/build-aux/: gbs-quirks  gerrit-quirks  prepare-release.sh
murphy-0.0.24/doc/: Makefile.in
murphy-0.0.24/doc/plugin-developer-guide/: Makefile.in
murphy-0.0.24/doc/plugin-developer-guide/db/: Makefile.in
murphy-0.0.24/doc/plugin-developer-guide/doxml/: Makefile.in
murphy-0.0.24/packaging/: murphy.changes  murphy.spec
murphy-0.0.24/packaging.in/: amb-config.lua  murphy.lua  murphy.spec.in  murphyd.init
murphy-0.0.24/src/: Makefile.am  Makefile.in  config.h.in  linker-script.breedline  linker-script.breedline-glib  linker-script.breedline-murphy  linker-script.common  linker-script.core  linker-script.dbus  linker-script.glib  linker-script.lua-decision  linker-script.lua-utils  linker-script.pulse  linker-script.resolver  linker-script.resource  linker-script.resource_backend  lua-utils-func-info.c
murphy-0.0.24/src/breedline/tests/: Makefile.in
murphy-0.0.24/src/common/tests/: Makefile.in
murphy-0.0.24/src/core/: plugin.c  plugin.h
murphy-0.0.24/src/core/lua-bindings/: lua-murphy.c
murphy-0.0.24/src/core/lua-decision/tests/: Makefile.in
murphy-0.0.24/src/core/tests/: Makefile.in
murphy-0.0.24/src/daemon/: config.c  daemon.c
murphy-0.0.24/src/daemon/tests/: Makefile.in
murphy-0.0.24/src/murphy-db/: Makefile.in
murphy-0.0.24/src/murphy-db/include/: Makefile.in
murphy-0.0.24/src/murphy-db/mdb/: Makefile.in  linker-script.mdb
murphy-0.0.24/src/murphy-db/mqi/: Makefile.in  linker-script.mqi
murphy-0.0.24/src/murphy-db/mql/: Makefile.in  linker-script.mql
murphy-0.0.24/src/murphy-db/tests/: Makefile.in
murphy-0.0.24/src/plugins/: plugin-amb.c  plugin-dlog.c  plugin-lua.c  plugin-resource-asm.c  plugin-telephony.c
murphy-0.0.24/src/plugins/resource-asm/: Makefile.am  Makefile.in  asm-bridge.c  asm-bridge.h
murphy-0.0.24/src/plugins/telephony/: ofono.c  ofono.h  resctl.c  resctl.h  telephony.c  telephony.h
murphy-0.0.24/src/plugins/tests/: Makefile.in  amb-conf.lua  test-amb.py
murphy-0.0.24/src/resolver/: parser.c  parser.h  scanner.c
murphy-0.0.24/src/resolver/scripting/simple/: simple-parser.c  simple-parser.h  simple-scanner.c
murphy-0.0.24/src/resolver/tests/: Makefile.in
murphy-0.0.24/utils/: Makefile.in
